--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: pgyot/arm-runner-action@v2
+      - uses: pguyot/arm-runner-action@v2
         with:
           commands: |
             chmod +x ./compile.sh
